--- a/HelloWord.Rmd
+++ b/HelloWord.Rmd
@@ -1,1 +1,9 @@
+---
+title: "HelloWord"
+author: "Cuong"
+date: "January 21, 2016"
+output: 
+  html_document: 
+    keep_md: yes
+---
 ## This is a markdown file
